# babylink

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Caddyfile.local  DEBUG_INSTRUCTIONS.md  DEPLOYMENT.md  Dockerfile  ESP32-BABY-DEVICE.md  README.md  README.old.md  SECURITY.md  THIRD_PARTY.md  WEBRTC_FIX_SUMMARY.md  cert.pem  docker-compose.yaml  generate-icon.py  key.pem  nginx.conf  package-lock.json  package.json  server-http.js  server.js  vitest.config.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: index.js  legal.example.json
esp32-firmware/: .gitignore  README.md  platformio.ini  read-serial.py
esp32-firmware/src/: main.cpp
esp32-s3-firmware/: .gitignore  README.md  platformio.ini
esp32-s3-firmware-idf/: .gitignore  CMakeLists.txt  Dockerfile  idf.sh  partitions.csv  sdkconfig.defaults
esp32-s3-firmware-idf/docs/: branch5-webrtc-toolchain-decision.md
esp32-s3-firmware-idf/main/: CMakeLists.txt  dev_defaults.h.example  idf_component.yml  log_wrap_stubs.c  main.cpp
esp32-s3-firmware/src/: dev_defaults.h.example  main.cpp  (+1 more)
middleware/: validation.js
public/: client.js  client.js.backup  index.html  manifest.json  service-worker.js  style.css
scripts/: test-gate.sh
server/: esp32-proxy.js  notification-service.js  room-config.js
tools/: README.md  esp32-ble-provision.py  esp32-s3-ble-provision.py  esp32-s3-simulator.js  esp32-simulator.js  test-esp32.sh
utils/: logger.js
views/: datenschutz.html  impressum.html  index.html  select-role.html  webrtc.html
(+62 files in other folders)
